--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -547,6 +547,33 @@ spec:
                   default:
                     description: Default is the default version to offer users.
                     type: string
+                  externalClusters:
+                    additionalProperties:
+                      description: ExternalClusterProviderVersioningConfiguration
+                        configures the available and default Kubernetes versions for
+                        ExternalCluster Providers.
+                      properties:
+                        default:
+                          description: Default is the default version to offer users.
+                          type: string
+                        updates:
+                          description: Updates is a list of available upgrades.
+                          items:
+                            description: Semver is a type that encapsulates github.com/Masterminds/semver/v3.Version
+                              struct so it can be used in our API.
+                            type: string
+                          type: array
+                        versions:
+                          description: Versions lists the available versions.
+                          items:
+                            description: Semver is a type that encapsulates github.com/Masterminds/semver/v3.Version
+                              struct so it can be used in our API.
+                            type: string
+                          type: array
+                      type: object
+                    description: ExternalClusters contains the available and default
+                      Kubernetes versions and updates for ExternalClusters.
+                    type: object
                   providerIncompatibilities:
                     description: ProviderIncompatibilities lists all the Kubernetes
                       version incompatibilities
