--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -2067,9 +2067,8 @@ spec:
                   component.
                 properties:
                   enabled:
-                    default: true
                     description: Controls whether kubernetes-dashboard is deployed
-                      to the user cluster or not.
+                      to the user cluster or not. Enabled by default.
                     type: boolean
                 type: object
               machineNetworks:
