--- a/addons/metallb/01_address-pools.yaml
+++ b/addons/metallb/01_address-pools.yaml
@@ -12,20 +12,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- range $ipamPool, $allocation := .Cluster.Network.IPAMAllocations }}
+{{- if .Cluster.Network.IPAMAllocations.metallb }}
+{{- $allocation := .Cluster.Network.IPAMAllocations.metallb }}
 ---
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: {{ $ipamPool }}
+  name: kkp-managed-pool
   namespace: metallb-system
-spec: 
-  {{- if eq $allocation.Type "prefix" }}
-  addresses: 
+spec:
+  addresses:
+  {{- if eq $allocation.Type "prefix" }} 
     - {{ $allocation.CIDR }}
   {{- end }}
   {{- if eq $allocation.Type "range" }}
-  addresses:
     {{- range $allocation.Addresses }}
     - {{ . }}
     {{- end }}
