--- a/addons/metallb/01_address-pools.yaml
+++ b/addons/metallb/01_address-pools.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if .Variables.disableAutoIPAMAllocation }}
+{{- if ne .Variables.disableAutoIPAMAllocation true }}
 {{- if .Cluster.Network.IPAMAllocations.metallb }}
 {{- $allocation := .Cluster.Network.IPAMAllocations.metallb }}
 ---
