--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -627,6 +627,8 @@ spec:
                         - cidrBlocks
                         type: object
                       serviceAccount:
+                        description: The Google Service Account (JSON format), encoded
+                          with base64.
                         type: string
                       subnetwork:
                         type: string
@@ -746,6 +748,7 @@ spec:
                           type: string
                         type: array
                       kubeconfig:
+                        description: The cluster's kubeconfig file, encoded with base64.
                         type: string
                       preAllocatedDataVolumes:
                         description: PreAllocatedDataVolumes holds list of preallocated
