--- a/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -472,6 +472,8 @@ spec:
                       nodePortsAllowedIPRange:
                         type: string
                       serviceAccount:
+                        description: The Google Service Account (JSON format), encoded
+                          with base64.
                         type: string
                       subnetwork:
                         type: string
@@ -579,6 +581,7 @@ spec:
                             type: string
                         type: object
                       kubeconfig:
+                        description: The cluster's kubeconfig file, encoded with base64.
                         type: string
                     type: object
                   nutanix:
