--- a/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -443,6 +443,8 @@ spec:
                       nodePortsAllowedIPRange:
                         type: string
                       serviceAccount:
+                        description: The Google Service Account (JSON format), encoded
+                          with base64.
                         type: string
                       subnetwork:
                         type: string
@@ -550,6 +552,7 @@ spec:
                             type: string
                         type: object
                       kubeconfig:
+                        description: The cluster's kubeconfig file, encoded with base64.
                         type: string
                     type: object
                   nutanix:
