--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1192,6 +1192,7 @@ spec:
                       definitions.
                     type: object
                   storageClassName:
+                    default: kubermatic-fast
                     description: StorageClassName is the name of the storage class
                       that the metering tool uses to save processed files before exporting
                       it to s3 bucket. Default value is kubermatic-fast.
